--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "nodemon src/server.js",
     "validate-config": "node -e \"import('./src/config.js').then(c => c.validateConfig()).catch(e => { console.error('Config validation failed:', e); process.exit(1); })\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-intent": "node src/test-intent.js"
+    "test-intent": "node src/test-intent.js",
+    "test-bot": "node test-bot.js",
+    "test-curl": "./test-curl.sh",
+    "test-all": "./run-test.sh"
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.0",
