--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test-intent": "node src/test-intent.js",
     "test-bot": "node test-bot.js",
     "test-curl": "./test-curl.sh",
-    "test-all": "./run-test.sh"
+    "test-all": "./run-test.sh",
+    "test-workspace": "node test-workspace-detection.js",
+    "test-issue-analysis": "node test-issue-analysis.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.0",
