--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "form-data": "^4.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
+    "octokit": "^4.1.3",
     "pg": "^8.11.5",
     "redis": "^4.6.13"
   },
